# ue4-docker

./: .gitignore  .travis.yml  CONTRIBUTING.adoc  CONTRIBUTING.md  LICENSE  README.adoc  README.md  build.py  index.html  pyproject.toml  requirements.txt  setup.py  ue4-docker-build.1  ue4-docker-clean.1  ue4-docker-diagnostics.1  ue4-docker-export.1  ue4-docker-info.1  ue4-docker-setup.1  ue4-docker-test.1  ue4-docker-version.1  ue4-docker.epub
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  docs.yml  release-drafter.yml
dockerfiles/conan-ue4cli/linux/: Dockerfile
dockerfiles/conan-ue4cli/windows/: Dockerfile
dockerfiles/ue4-build-prerequisites/linux/: Dockerfile
dockerfiles/ue4-build-prerequisites/windows/: Dockerfile
dockerfiles/ue4-build/linux/: Dockerfile  build-sdl.py  patch-setup-linux.py
dockerfiles/ue4-build/windows/: Dockerfile  patch-setup-win.py
dockerfiles/ue4-capture/linux/: Dockerfile
dockerfiles/ue4-engine/linux/: Dockerfile  build-sdl.py  copy-sdl.py  linker-fixup.py
dockerfiles/ue4-engine/windows/: Dockerfile
dockerfiles/ue4-full/linux/: Dockerfile
dockerfiles/ue4-full/windows/: Dockerfile
dockerfiles/ue4-minimal/linux/: Dockerfile
dockerfiles/ue4-minimal/windows/: Dockerfile
docs/: advanced-build-options.adoc  available-container-images.adoc  build.sh  configuring-linux.adoc  configuring-macos.adoc  configuring-windows-10.adoc  configuring-windows-server.adoc  feedback.adoc  index.adoc  introduction-to-ue4-docker.adoc  large-container-images-primer.adoc  linux-installed-builds.adoc  troubleshooting-build-issues.adoc  ue4-docker-build.adoc  ue4-docker-clean.adoc  ue4-docker-diagnostics.adoc  ue4-docker-export.adoc  ue4-docker-info.adoc  ue4-docker-setup.adoc  ue4-docker-test.adoc  ue4-docker-version.adoc  windows-container-primer.adoc
docs/building-images/: advanced-build-options.adoc  advanced-build-options.md  available-container-images.adoc  available-container-images.md  index.adoc  troubleshooting-build-issues.adoc  troubleshooting-build-issues.md
docs/commands/: build.md  clean.md  diagnostics.md  export.md  index.adoc  info.md  list-of-commands.md  setup.md  test.md  ue4-docker-build.adoc  ue4-docker-diagnostics.adoc  ue4-docker-export.adoc  ue4-docker-info.adoc  ue4-docker-setup.adoc  ue4-docker-test.adoc  ue4-docker-version.adoc  version.md
docs/configuration/: configuring-linux.adoc  configuring-linux.md  configuring-macos.adoc  configuring-macos.md  configuring-windows-10.adoc  configuring-windows-10.md  configuring-windows-server.adoc  configuring-windows-server.md  index.adoc  supported-host-configurations.adoc  supported-host-configurations.md
docs/images/: images_sequence.xml
docs/read-these-first/: frequently-asked-questions.adoc  frequently-asked-questions.md  index.adoc  introduction-to-ue4-docker.adoc  introduction-to-ue4-docker.md  large-container-images-primer.adoc  large-container-images-primer.md  nvidia-docker-primer.adoc  nvidia-docker-primer.md  windows-container-primer.adoc  windows-container-primer.md
docs/use-cases/: continuous-integration.adoc  continuous-integration.md  index.adoc  linux-installed-builds.adoc  linux-installed-builds.md  microservices.adoc  microservices.md  use-cases-overview.adoc  use-cases-overview.md
src/ue4docker/: build.py  clean.py  diagnostics_cmd.py  directory_breakup.py  info.py  main.py  test.py  version.py
test-suite/: test-ue-releases.py
ue4docker/: __init__.py  __main__.py  build.py  clean.py  diagnostics_cmd.py  export.py  info.py  main.py  setup_cmd.py  test.py  version.py  version_cmd.py
ue4docker/diagnostics/: __init__.py  base.py  diagnostic_20gig.py  diagnostic_8gig.py  diagnostic_all.py  diagnostic_maxsize.py  diagnostic_network.py
ue4docker/exports/: __init__.py  export_installed.py  export_packages.py
ue4docker/infrastructure/: BuildConfiguration.py  CredentialEndpoint.py  DarwinUtils.py  DockerUtils.py  FilesystemUtils.py  GlobalConfiguration.py  ImageBuilder.py  ImageCleaner.py  Logger.py  NetworkUtils.py  PackageUtils.py  PrettyPrinting.py  ResourceMonitor.py  SubprocessUtils.py  WindowsUtils.py  __init__.py
ue4docker/tests/: build-and-package.py  consume-external-deps.py
utils/: BuildConfiguration.py  DockerUtils.py  ImageBuilder.py  Logger.py  PackageUtils.py  WindowsUtils.py  __init__.py
(+109 files in other folders)
