[project]
name = "ue4-docker"
version = "0.0.112"
description = "Windows and Linux containers for Unreal Engine"
requires-python = ">= 3.7"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Adam Rehn", email = "adam@adamrehn.com" },
    { name = "Marat Radchenko", email = "marat@slonopotamus.org" },
]
keywords = [
    "unreal engine",
    "docker",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "colorama",
    "docker>=6.1.0",
    "humanfriendly",
    "importlib-metadata>=1.0;python_version<'3.8'",
    "Jinja2>=2.11.3",
    "packaging>=19.1",
    "psutil",
    "termcolor",
]

# See https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#urls
[project.urls]
Homepage = "https://github.com/adamrehn/ue4-docker"
Documentation = "https://adamrehn.github.io/ue4-docker"
Repository = "https://github.com/adamrehn/ue4-docker.git"

[project.scripts]
ue4-docker = "ue4docker:main"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
ue4docker = [
    "dockerfiles/*/*/.dockerignore",
    "dockerfiles/diagnostics/*/*/*",
    "dockerfiles/*/*/*",
    "tests/*.py",
]
